[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gym_adaptive_img_pre_proc"
version = "0.9.0"
authors = [
  { name="Daniel Elliott", email="danelliottster@gmail.com" },
]
description = "A RL gym environment for image pre-processing tasks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danelliottster/gym_adaptive_image_preprocessing"